# UrbanAccessAnalyzer_Version

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
UrbanAccessAnalyzer/: h3_utils.py  isochrones.py  osm.py
docs/superpowers/plans/: 2026-04-07-urban-access-app.md
docs/superpowers/specs/: 2026-04-07-urban-access-app-design.md
examples/: hospitals_andorra.ipynb  rural_schools.ipynb  rural_schools_andorra.ipynb  stations_access.py  worldwide_public_transport.ipynb
examples/Stations/: optimisation_summary.json  visualize.ipynb
examples/Stations/Old/: visualize.ipynb
examples/andorra/: introduce_school.ipynb
examples/output/Schools_Marcel/: probar.ipynb
examples/output/andorra/: probar.ipynb  try_parks.ipynb  tryout.ipynb
examples/output/andorra_la_vella/: probar.ipynb
examples/output_park/: Park_Score_Explanation.md
examples/output_park/andorra/parks/: try_parks.ipynb
